# libstock

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: Design Note.MD
include/: stock.h  workflow.h
src/: stock.cpp
test/: README.md  timeseries_gtest.cpp  timeseries_test.cpp
